--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -49,7 +49,10 @@
     <Compile Include="BLogic\Tasks\AITaskContainer.cs" />
     <Compile Include="Commands\AddCommentsCommand.cs" />
     <Compile Include="Commands\ChooseModelCommand.cs" />
-    <Compile Include="Commands\ExplainCommand.cs" />
+    <Compile Include="Commands\CompleteCodeCommand.cs" />
+    <Compile Include="Commands\ExplainCodeCommand.cs" />
+    <Compile Include="Commands\OptimizeCodeCommand.cs" />
+    <Compile Include="Dto\OpenRouter\Model.cs" />
     <Compile Include="Helper\DocumentHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\ListHelper.cs" />
@@ -65,6 +68,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>source.extension.vsixmanifest</DependentUpon>
     </Compile>
+    <Compile Include="UI\ToolWindows\ChooseModelToolWindow.cs" />
+    <Compile Include="UI\ToolWindows\ChooseModelToolWindowControl.xaml.cs">
+      <DependentUpon>ChooseModelToolWindowControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\ToolWindows\TaskListToolWindow.cs" />
     <Compile Include="UI\ToolWindows\TaskListToolWindowControl.xaml.cs">
       <DependentUpon>TaskListToolWindowControl.xaml</DependentUpon>
@@ -74,6 +81,7 @@
       <DependentUpon>StatusPopup.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Informer\UIInformer.cs" />
+    <Compile Include="UI\ViewModels\ChooseModelViewModel.cs" />
     <Compile Include="UI\ViewModels\TaskListViewModel.cs" />
     <Compile Include="VSCommandTable.cs">
       <AutoGen>True</AutoGen>
@@ -118,6 +126,9 @@
     <PackageReference Include="OpenAI">
       <Version>2.1.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Net.Http.Json">
+      <Version>9.0.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WpfHelpers\WpfHelpers.csproj">
@@ -126,6 +137,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="UI\ToolWindows\ChooseModelToolWindowControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
     <Page Include="UI\ToolWindows\TaskListToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
