--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -45,23 +45,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BLogic\Tasks\AITask.cs" />
-    <Compile Include="BLogic\Tasks\AITaskContainer.cs" />
+    <Compile Include="BLogic\Chat.cs" />
+    <Compile Include="BLogic\ChatContainer.cs" />
+    <Compile Include="BLogic\ChatPrompt.cs" />
     <Compile Include="Commands\AddCommentsCommand.cs" />
     <Compile Include="Commands\ChooseModelCommand.cs" />
     <Compile Include="Commands\CompleteCodeCommand.cs" />
     <Compile Include="Commands\ExplainCodeCommand.cs" />
-    <Compile Include="Commands\OpenTaskToolWindowCommand.cs" />
+    <Compile Include="Commands\OpenChatListToolWindowCommand.cs" />
     <Compile Include="Commands\OptimizeCodeCommand.cs" />
     <Compile Include="Dto\OpenRouter\Model.cs" />
     <Compile Include="Helper\DocumentHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\ListHelper.cs" />
-    <Compile Include="Helper\QueryBuilder.cs" />
+    <Compile Include="BLogic\UserPrompt.cs" />
     <Compile Include="Helper\ReflectionHelper.cs" />
     <Compile Include="Helper\RoslynDocumentHelper.cs" />
     <Compile Include="Helper\VisualStudioDocumentHelper.cs" />
     <Compile Include="Options\ApiPage.cs" />
+    <Compile Include="Options\OptionsProvider.cs" />
+    <Compile Include="Options\ResponsePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FreeAIrPackage.cs" />
     <Compile Include="source.extension.cs">
@@ -73,9 +76,9 @@
     <Compile Include="UI\ToolWindows\ChooseModelToolWindowControl.xaml.cs">
       <DependentUpon>ChooseModelToolWindowControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UI\ToolWindows\TaskListToolWindow.cs" />
-    <Compile Include="UI\ToolWindows\TaskListToolWindowControl.xaml.cs">
-      <DependentUpon>TaskListToolWindowControl.xaml</DependentUpon>
+    <Compile Include="UI\ToolWindows\ChatListToolWindow.cs" />
+    <Compile Include="UI\ToolWindows\ChatListToolWindowControl.xaml.cs">
+      <DependentUpon>ChatListToolWindowControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Informer\DefaultUIParameters.cs" />
     <Compile Include="UI\Informer\StatusPopup.xaml.cs">
@@ -83,7 +86,7 @@
     </Compile>
     <Compile Include="UI\Informer\UIInformer.cs" />
     <Compile Include="UI\ViewModels\ChooseModelViewModel.cs" />
-    <Compile Include="UI\ViewModels\TaskListViewModel.cs" />
+    <Compile Include="UI\ViewModels\ChatListViewModel.cs" />
     <Compile Include="VSCommandTable.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -164,7 +167,7 @@
       <SubType>Designer</SubType>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
     </Page>
-    <Page Include="UI\ToolWindows\TaskListToolWindowControl.xaml">
+    <Page Include="UI\ToolWindows\ChatListToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
