--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="BLogic\Chat.cs" />
     <Compile Include="BLogic\ChatContainer.cs" />
+    <Compile Include="BLogic\CommitMessageBuilder.cs" />
     <Compile Include="Commands\AddCommentsCommand.cs" />
     <Compile Include="Commands\ChooseModelCommand.cs" />
     <Compile Include="Commands\CompleteCodeCommand.cs" />
@@ -78,6 +79,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>source.extension.vsixmanifest</DependentUpon>
     </Compile>
+    <Compile Include="UI\Theme.cs" />
     <Compile Include="UI\ToolWindows\ChooseModelToolWindow.cs" />
     <Compile Include="UI\ToolWindows\ChooseModelToolWindowControl.xaml.cs">
       <DependentUpon>ChooseModelToolWindowControl.xaml</DependentUpon>
@@ -93,6 +95,9 @@
     <Compile Include="UI\Informer\UIInformer.cs" />
     <Compile Include="UI\ViewModels\ChooseModelViewModel.cs" />
     <Compile Include="UI\ViewModels\ChatListViewModel.cs" />
+    <Compile Include="UI\Windows\WaitGitWindow.xaml.cs">
+      <DependentUpon>WaitGitWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VSCommandTable.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -101,6 +106,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\xshd\csharp.xshd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Resources\xshd\patch.xshd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
@@ -148,12 +157,18 @@
     <PackageReference Include="Microsoft.VisualStudio.LanguageServices">
       <Version>4.13.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.TeamFoundation.Git.Extensibility">
+      <Version>17.0.32322.3</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.13.2126">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="OpenAI">
       <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="RunProcessAsTask">
+      <Version>1.2.4</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.Json">
       <Version>9.0.4</Version>
@@ -180,6 +195,10 @@
     <Page Include="UI\Informer\StatusPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Windows\WaitGitWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
