Added generating unit tests.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Commands\CompleteCodeByCommentsCommand.cs" />
     <Compile Include="Commands\ExplainCodeCommand.cs" />
     <Compile Include="Commands\ExplainFileCommand.cs" />
+    <Compile Include="Commands\GenerateUnitTestsCommand.cs" />
     <Compile Include="Commands\GenerateWholeLineSuggestionCommand.cs" />
+    <Compile Include="Commands\InvokeLLMCommand.cs" />
     <Compile Include="Commands\OpenChatListToolWindowCommand.cs" />
     <Compile Include="Commands\OptimizeCodeCommand.cs" />
     <Compile Include="Commands\StartDiscussionCommand.cs" />
