--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BLogic\ChatContainer.cs" />
     <Compile Include="BLogic\CommitMessageBuilder.cs" />
     <Compile Include="BLogic\CompletionProposal.cs" />
+    <Compile Include="BLogic\TextDescriptor.cs" />
     <Compile Include="Commands\AddCommentsCommand.cs" />
     <Compile Include="Commands\AddCommentsToFileCommand.cs" />
     <Compile Include="Commands\ChooseModelCommand.cs" />
@@ -63,9 +64,10 @@
     <Compile Include="Commands\StartDiscussionCommand.cs" />
     <Compile Include="Dto\OpenRouter\Model.cs" />
     <Compile Include="Helper\AnswerHelper.cs" />
-    <Compile Include="Helper\DocumentHelper.cs" />
+    <Compile Include="Helper\TextDescriptorHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\LanguageHelper.cs" />
+    <Compile Include="Helper\LineEndingHelper.cs" />
     <Compile Include="Helper\ListHelper.cs" />
     <Compile Include="BLogic\UserPrompt.cs" />
     <Compile Include="Helper\MarkdownScrollViewerExtensions.cs" />
@@ -152,6 +154,9 @@
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.533" ExcludeAssets="Runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="editorconfig">
+      <Version>0.15.0</Version>
     </PackageReference>
     <PackageReference Include="MdXaml">
       <Version>1.27.0</Version>
