--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Commands\StartDiscussionCommand.cs" />
     <Compile Include="Dto\OpenRouter\Model.cs" />
     <Compile Include="Helper\AnswerHelper.cs" />
+    <Compile Include="Helper\CollectionHelper.cs" />
+    <Compile Include="Helper\KeyboardHelper.cs" />
+    <Compile Include="Helper\PathHelper.cs" />
+    <Compile Include="Helper\SolutionHelper.cs" />
     <Compile Include="Helper\TextDescriptorHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\LanguageHelper.cs" />
@@ -95,6 +99,16 @@
     </Compile>
     <Compile Include="UI\CodeLens\CodeLenseUserControlViewModel.cs" />
     <Compile Include="UI\CodeLens\ViewElementFactory.cs" />
+    <Compile Include="UI\Embedillo\CompletionData.cs" />
+    <Compile Include="UI\Embedillo\ControlPositionInfo.cs" />
+    <Compile Include="UI\Embedillo\ControlPositionManager.cs" />
+    <Compile Include="UI\Embedillo\EmbedilloControl.xaml.cs">
+      <DependentUpon>EmbedilloControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Embedillo\EnterKeyBehavior.cs" />
+    <Compile Include="UI\Embedillo\MentionVisualLineGenerator.cs" />
+    <Compile Include="UI\Embedillo\TextChangeModeEnum.cs" />
+    <Compile Include="UI\Embedillo\VisualLine\SourceFile\SourceFileVisualLineGeneratorFactory.cs" />
     <Compile Include="UI\Theme.cs" />
     <Compile Include="UI\ToolWindows\ChooseModelToolWindow.cs" />
     <Compile Include="UI\ToolWindows\ChooseModelToolWindowControl.xaml.cs">
@@ -210,6 +224,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
+      <Version>1.1.135</Version>
+    </PackageReference>
     <PackageReference Include="OpenAI">
       <Version>2.1.0</Version>
     </PackageReference>
@@ -239,6 +256,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="UI\CodeLens\CodeLenseUserControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\Embedillo\EmbedilloControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
