--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BLogic\ChatContainer.cs" />
     <Compile Include="BLogic\CommitMessageBuilder.cs" />
     <Compile Include="BLogic\CompletionProposal.cs" />
+    <Compile Include="BLogic\Context\ChatContext.cs" />
     <Compile Include="BLogic\TextDescriptor.cs" />
     <Compile Include="CodeLens\CodeLensConnectionHandler.cs" />
     <Compile Include="CodeLens\CodeLensListener.cs" />
@@ -99,6 +100,7 @@
     </Compile>
     <Compile Include="UI\CodeLens\CodeLenseUserControlViewModel.cs" />
     <Compile Include="UI\CodeLens\ViewElementFactory.cs" />
+    <Compile Include="UI\Embedillo\Answer\Parser\Acceptor.cs" />
     <Compile Include="UI\Embedillo\CompletionData.cs" />
     <Compile Include="UI\Embedillo\ControlPositionInfo.cs" />
     <Compile Include="UI\Embedillo\ControlPositionManager.cs" />
@@ -288,6 +290,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resources.ru.resx" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="IncludeNuGetPackageReferences" AfterTargets="GetVsixSourceItems">
