Going to chat context. N3

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -54,15 +54,16 @@
     <Compile Include="CodeLens\CodeLensConnectionHandler.cs" />
     <Compile Include="CodeLens\CodeLensListener.cs" />
     <Compile Include="Commands\AddXmlCommentsCommand.cs" />
-    <Compile Include="Commands\AddCommentsToFileCommand.cs" />
-    <Compile Include="Commands\ChooseModelCommand.cs" />
+    <Compile Include="Commands\File\AddCommentsToFileCommand.cs" />
+    <Compile Include="Commands\Other\ChooseModelCommand.cs" />
     <Compile Include="Commands\CompleteCodeByCommentsCommand.cs" />
     <Compile Include="Commands\ExplainCodeCommand.cs" />
-    <Compile Include="Commands\ExplainFileCommand.cs" />
+    <Compile Include="Commands\File\ExplainFileCommand.cs" />
     <Compile Include="Commands\GenerateUnitTestsCommand.cs" />
     <Compile Include="Commands\GenerateWholeLineSuggestionCommand.cs" />
     <Compile Include="Commands\InvokeLLMCommand.cs" />
-    <Compile Include="Commands\OpenChatListToolWindowCommand.cs" />
+    <Compile Include="Commands\File\InvokeLLMFileCommand.cs" />
+    <Compile Include="Commands\Other\OpenChatListToolWindowCommand.cs" />
     <Compile Include="Commands\OptimizeCodeCommand.cs" />
     <Compile Include="Commands\StartDiscussionCommand.cs" />
     <Compile Include="Dto\OpenRouter\Model.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Helper\CollectionHelper.cs" />
     <Compile Include="Helper\KeyboardHelper.cs" />
     <Compile Include="Helper\PathHelper.cs" />
+    <Compile Include="Helper\ResourceHelper.cs" />
     <Compile Include="Helper\SolutionHelper.cs" />
     <Compile Include="Helper\TextDescriptorHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
