Initial version if context item scanner.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -48,12 +48,20 @@
     <Compile Include="Antlr\AnswerParser.cs" />
     <Compile Include="Antlr\ErrorListener.cs" />
     <Compile Include="Antlr\MarkdownListener.cs" />
+    <Compile Include="BLogic\Answer.cs" />
     <Compile Include="BLogic\Chat.cs" />
     <Compile Include="BLogic\ChatContainer.cs" />
+    <Compile Include="BLogic\ChatDescription.cs" />
+    <Compile Include="BLogic\ChatKindEnum.cs" />
+    <Compile Include="BLogic\ChatStatusEnum.cs" />
     <Compile Include="BLogic\CommitMessageBuilder.cs" />
     <Compile Include="BLogic\CompletionProposal.cs" />
     <Compile Include="BLogic\Context\ChatContext.cs" />
     <Compile Include="BLogic\Context\ChatContextEventArgs.cs" />
+    <Compile Include="BLogic\Context\Composer\ContextComposer.cs" />
+    <Compile Include="BLogic\Context\Composer\ContextComposeResult.cs" />
+    <Compile Include="BLogic\Context\Composer\ContextSelectedIdentifier.cs" />
+    <Compile Include="BLogic\Context\Composer\TypeReferenceWalker.cs" />
     <Compile Include="BLogic\Context\IChatContext.cs" />
     <Compile Include="BLogic\Context\IChatContextItem.cs" />
     <Compile Include="BLogic\Context\SolutionItemChatContextItem.cs" />
@@ -79,6 +87,7 @@
     <Compile Include="Helper\KeyboardHelper.cs" />
     <Compile Include="Helper\PathHelper.cs" />
     <Compile Include="Helper\ResourceHelper.cs" />
+    <Compile Include="Helper\RoslynHelper.cs" />
     <Compile Include="Helper\SolutionHelper.cs" />
     <Compile Include="Helper\StringHelper.cs" />
     <Compile Include="Helper\TextDescriptorHelper.cs" />
