Added ability to fix build errors.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -65,6 +65,8 @@
     <Compile Include="BLogic\Context\IChatContext.cs" />
     <Compile Include="BLogic\Context\IChatContextItem.cs" />
     <Compile Include="BLogic\Context\SolutionItemChatContextItem.cs" />
+    <Compile Include="Commands\BuildError\BuildErrorWindowFixErrorCommand.cs" />
+    <Compile Include="Commands\BuildError\ErrorInformation.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
     <Compile Include="BLogic\TextDescriptor.cs" />
     <Compile Include="CodeLens\CodeLensConnectionHandler.cs" />
