--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -278,6 +278,9 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
       <Version>1.1.135</Version>
     </PackageReference>
+    <PackageReference Include="ModelContextProtocol">
+      <Version>0.2.0-preview.1</Version>
+    </PackageReference>
     <PackageReference Include="OpenAI">
       <Version>2.1.0</Version>
     </PackageReference>
