--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Commands\BuildError\BuildErrorWindowFixErrorCommand.cs" />
     <Compile Include="Commands\BuildError\ErrorInformation.cs" />
     <Compile Include="Commands\Other\InstallGithubMCPServerCommand.cs" />
+    <Compile Include="Helper\JsonElementDeserializer.cs" />
+    <Compile Include="Helper\OpenAIHelper.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
     <Compile Include="BLogic\TextDescriptor.cs" />
     <Compile Include="CodeLens\CodeLensConnectionHandler.cs" />
@@ -113,6 +115,10 @@
     <Compile Include="MCP\Agent\Github\GithubMCPInstallBackgroundTask.cs" />
     <Compile Include="MCP\Agent\IAgent.cs" />
     <Compile Include="MCP\Agent\ProcessMonitor.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\GetSolutionItemBodyTool.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\GetAllSolutionItemsTool.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\VisualStudioAgentTool.cs" />
+    <Compile Include="MCP\Agent\VS\VisualStudioAgent.cs" />
     <Compile Include="MCP\AvailableToolController.cs" />
     <Compile Include="Options\ApiPage.cs" />
     <Compile Include="Options\MCPPage.cs" />
@@ -230,6 +236,10 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="OpenAI, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b4187f3e65366280, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\.bin\OpenAI\OpenAI.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -305,11 +315,11 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
       <Version>1.1.135</Version>
     </PackageReference>
-    <PackageReference Include="OpenAI">
-      <Version>2.1.0</Version>
-    </PackageReference>
     <PackageReference Include="RunProcessAsTask">
       <Version>1.2.4</Version>
+    </PackageReference>
+    <PackageReference Include="System.ClientModel">
+      <Version>1.2.1</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.Json">
       <Version>9.0.5</Version>
