--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -51,7 +51,6 @@
     <Compile Include="Antlr\IAnswerParser.cs" />
     <Compile Include="Antlr\MarkdownListener.cs" />
     <Compile Include="Antlr\Prompt\PromptParser.cs" />
-    <Compile Include="BLogic\Answer.cs" />
     <Compile Include="BLogic\Chat.cs" />
     <Compile Include="BLogic\ChatContainer.cs" />
     <Compile Include="BLogic\ChatDescription.cs" />
@@ -65,7 +64,6 @@
     <Compile Include="BLogic\Context\Composer\ContextComposeResult.cs" />
     <Compile Include="BLogic\Context\Composer\ContextSelectedIdentifier.cs" />
     <Compile Include="BLogic\Context\Composer\TypeReferenceWalker.cs" />
-    <Compile Include="BLogic\Context\IChatContext.cs" />
     <Compile Include="BLogic\Context\IChatContextItem.cs" />
     <Compile Include="BLogic\Context\Item\CustomFileContextItem.cs" />
     <Compile Include="BLogic\Context\Item\SolutionItemChatContextItem.cs" />
@@ -73,6 +71,7 @@
     <Compile Include="Commands\BuildError\BuildErrorWindowFixErrorCommand.cs" />
     <Compile Include="BuildErrors\BuildResultInformation.cs" />
     <Compile Include="Commands\Other\InstallGithubMCPServerCommand.cs" />
+    <Compile Include="Helper\DialogContextHelper.cs" />
     <Compile Include="Helper\JsonElementDeserializer.cs" />
     <Compile Include="Helper\OpenAIHelper.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
@@ -116,7 +115,9 @@
     <Compile Include="MCP\Agent\Github\GithubMCPInstallBackgroundTask.cs" />
     <Compile Include="MCP\Agent\IAgent.cs" />
     <Compile Include="MCP\Agent\ProcessMonitor.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\ReplaceDocumentBodyTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\GetAllSolutionItemsTool.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\BuildAndReturnBuildResultsTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\GetSolutionItemBodyTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\GetAllWarningErrorsTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\VisualStudioAgentTool.cs" />
