Fixed various bugs. Added support for .github/copilot-instructions.md.

--- a/MCP/Github/Agent/Properties/launchSettings.json
+++ b/MCP/Github/Agent/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Agent": {
       "commandName": "Project",
-      "commandLineArgs": "34315"
+      "commandLineArgs": "34315 123"
     }
   }
 }
