--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BuildErrors\BuildResultInformation.cs" />
     <Compile Include="Commands\Other\InstallGithubMCPServerCommand.cs" />
     <Compile Include="Helper\DialogContextHelper.cs" />
+    <Compile Include="Helper\DTEHelper.cs" />
     <Compile Include="Helper\JsonElementDeserializer.cs" />
     <Compile Include="Helper\OpenAIHelper.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
@@ -115,6 +116,7 @@
     <Compile Include="MCP\Agent\Github\GithubMCPInstallBackgroundTask.cs" />
     <Compile Include="MCP\Agent\IAgent.cs" />
     <Compile Include="MCP\Agent\ProcessMonitor.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\InstallNugetPackageTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\ReplaceDocumentBodyTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\GetAllSolutionItemsTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\BuildAndReturnBuildResultsTool.cs" />
@@ -317,6 +319,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
       <Version>1.1.135</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.VisualStudio">
+      <Version>17.14.0</Version>
     </PackageReference>
     <PackageReference Include="RunProcessAsTask">
       <Version>1.2.4</Version>
