--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BLogic\Chat.cs" />
     <Compile Include="BLogic\ChatContainer.cs" />
     <Compile Include="BLogic\ChatDescription.cs" />
+    <Compile Include="BLogic\ChatHelper.cs" />
     <Compile Include="BLogic\ChatKindEnum.cs" />
     <Compile Include="BLogic\ChatStatusEnum.cs" />
     <Compile Include="BLogic\CommitMessageBuilder.cs" />
