--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -61,6 +61,7 @@
     <Compile Include="BLogic\CompletionProposal.cs" />
     <Compile Include="BLogic\Context\ChatContext.cs" />
     <Compile Include="BLogic\Context\ChatContextEventArgs.cs" />
+    <Compile Include="BLogic\Context\ChatContextItemHelper.cs" />
     <Compile Include="BLogic\Context\Composer\ContextComposer.cs" />
     <Compile Include="BLogic\Context\Composer\ContextComposeResult.cs" />
     <Compile Include="BLogic\Context\Composer\ContextSelectedIdentifier.cs" />
@@ -72,9 +73,11 @@
     <Compile Include="Commands\BuildError\BuildErrorWindowFixErrorCommand.cs" />
     <Compile Include="BuildErrors\BuildResultInformation.cs" />
     <Compile Include="Commands\Other\InstallGithubMCPServerCommand.cs" />
+    <Compile Include="Commands\Other\ShowReleaseNotesCommand.cs" />
+    <Compile Include="Commands\Other\OpenNaturalSearchToolWindowCommand.cs" />
     <Compile Include="Find\FindWindowModifier.cs" />
-    <Compile Include="Helper\DialogContextHelper.cs" />
     <Compile Include="Helper\DTEHelper.cs" />
+    <Compile Include="Helper\ExtensionPath.cs" />
     <Compile Include="Helper\JsonElementDeserializer.cs" />
     <Compile Include="Helper\OpenAIHelper.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
@@ -112,6 +115,8 @@
     <Compile Include="Helper\RoslynDocumentHelper.cs" />
     <Compile Include="Helper\SuggestionHijackHelper.cs" />
     <Compile Include="ImageMonikers.cs" />
+    <Compile Include="InfoBar\InfoBarService.cs" />
+    <Compile Include="InfoBar\ReleaseNotesInfoBarService.cs" />
     <Compile Include="MCP\Agent\AgentCollection.cs" />
     <Compile Include="MCP\Agent\Github\BLO\Tools.cs" />
     <Compile Include="MCP\Agent\Github\GithubAgent.cs" />
@@ -231,6 +236,10 @@
     <Antlr4 Include="Antlr\Context\ContextMarkdown.g4">
       <Generator>MSBuild:Compile</Generator>
     </Antlr4>
+    <Content Include="..\RELEASE_NOTES.md">
+      <Link>RELEASE_NOTES.md</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
       <Generator>VsixManifestGenerator</Generator>
@@ -275,6 +284,12 @@
     </PackageReference>
     <PackageReference Include="editorconfig">
       <Version>0.15.0</Version>
+    </PackageReference>
+    <PackageReference Include="FuzzySharp">
+      <Version>2.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="JsonPath.Net">
+      <Version>2.1.1</Version>
     </PackageReference>
     <PackageReference Include="MdXaml">
       <Version>1.27.0</Version>
@@ -338,14 +353,16 @@
       <Version>1.2.1</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.Json">
-      <Version>9.0.5</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Net.ServerSentEvents">
       <Version>9.0.5</Version>
     </PackageReference>
+    <!--
     <PackageReference Include="System.Text.Json">
       <Version>9.0.5</Version>
     </PackageReference>
+-->
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodeLens\FreeAIr.CodeLens.csproj">
