--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Helper\ExtensionPath.cs" />
     <Compile Include="Helper\FileTypeHelper.cs" />
     <Compile Include="Helper\JsonElementDeserializer.cs" />
+    <Compile Include="Helper\NaturalLanguageHelper.cs" />
     <Compile Include="Helper\OpenAIHelper.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
     <Compile Include="BLogic\TextDescriptor.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="MCP\Agent\IAgent.cs" />
     <Compile Include="MCP\Agent\ProcessMonitor.cs" />
     <Compile Include="MCP\Agent\VS\Tools\GitCollectChangesTool.cs" />
+    <Compile Include="MCP\Agent\VS\Tools\WebSearchTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\GitCommitTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\InstallNugetPackageTool.cs" />
     <Compile Include="MCP\Agent\VS\Tools\ReplaceDocumentBodyTool.cs" />
@@ -149,6 +151,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Search\GoogleSearcher.cs" />
+    <Compile Include="Search\SearchResult.cs" />
     <Compile Include="source.extension.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -297,6 +301,9 @@
     <PackageReference Include="FuzzySharp">
       <Version>2.0.2</Version>
     </PackageReference>
+    <PackageReference Include="HtmlAgilityPack">
+      <Version>1.12.1</Version>
+    </PackageReference>
     <PackageReference Include="JsonPath.Net">
       <Version>2.1.1</Version>
     </PackageReference>
@@ -310,7 +317,7 @@
       <Version>2.3.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" PrivateAssets="all">
-      <Version>9.0.5</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
       <Version>4.13.0</Version>
@@ -325,7 +332,7 @@
       <Version>9.5.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>9.0.5</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.CoreUtility">
       <Version>17.13.226</Version>
@@ -354,6 +361,9 @@
     </PackageReference>
     <PackageReference Include="NuGet.VisualStudio">
       <Version>17.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="PuppeteerSharp">
+      <Version>20.1.3</Version>
     </PackageReference>
     <PackageReference Include="RunProcessAsTask">
       <Version>1.2.4</Version>
